...
    <string name="add">添加</string>

    <string name="chats_eyebrow">PRIVATE RELATIONSHIPS</string>
    <string name="chats_title">Chats</string>
    <string name="no_matching_conversations">没有匹配的会话。</string>
    <string name="messenger_title">Messenger</string>
    <string name="messenger_recent_chats">最近聊天</string>
    <string name="messenger_eyebrow">消息</string>
    <string name="messenger_title_chat">聊天</string>
    <string name="messenger_new_character_action">+ New Character</string>
    <string name="messenger_list_settings">Messenger settings</string>
    <string name="messenger_chats">Chats</string>
    <string name="messenger_open_console">Open console</string>
    <string name="messenger_chat_options">Chat options</string>
    <string name="messenger_view_profile">View profile</string>
    <string name="messenger_select_messages">Select messages</string>
...
    <string name="messenger_attach_image">Attach image</string>
    <string name="chat_image_missing">图片文件已不存在</string>
    <string name="chat_image_attached">附件图片</string>
    <string name="messenger_import">Import</string>
    <string name="messenger_browse">Browse</string>
    <string name="messenger_search_placeholder">按名称搜索</string>
    <string name="messenger_groups">Groups</string>
    <string name="messenger_new_group">New group</string>
    <string name="messenger_new_group_title">New group</string>
    <string name="messenger_new_group_summary">Select at least two characters to start a group chat.</string>
    <string name="messenger_new_group_name">Group name</string>
    <string name="messenger_new_group_create">Create group</string>
    <string name="messenger_new_group_need_members">Select at least two characters.</string>
...
